<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HotelActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/hotelLogout"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:text="@string/Logout"
                android:visibility="gone" />

            <Button
                android:id="@+id/hotelBack"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:text="@string/Back"
                android:visibility="gone" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
            <EditText
                android:id="@+id/destinationPlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/destinationPlace"
                android:layout_weight="1"
                android:inputType="textShortMessage" />

            <EditText
                android:id="@+id/guests"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/Guests"
                android:layout_weight="1"
                android:inputType="textShortMessage" />
</LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp">

                    <EditText
                        android:id="@+id/checkIn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_weight="1"
                        android:hint="Check-In"
                        android:inputType="date" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/calendar_btn_1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/calendar" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp">

                    <EditText
                        android:id="@+id/checkOut"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_weight="1"
                        android:hint="Check-Out"
                        android:inputType="date" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/calendar_btn_2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/calendar" />
                </LinearLayout>
            </LinearLayout>


         <!--   <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/checkIn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Check In Date"
                    android:inputType="date" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/calendar_btn_1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/calendar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/checkOut"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Check Out Date"
                    android:inputType="date" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/calendar_btn_2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/calendar" />
            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="Max Price: " />

                <androidx.legacy.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="$"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/price_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:inputType="numberDecimal"
                    android:textSize="16sp"
                    android:text="100.00" />

            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"/>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:numStars="5" />

            <Button
                android:id="@+id/searchHotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Search Hotels"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/add_button"/>



        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>